fixing redis serialization

--- a/RaiseTheBar/Web.config
+++ b/RaiseTheBar/Web.config
@@ -9,6 +9,7 @@
     <add key="defaultLat" value="50.061713" />
     <add key="defaultLon" value="19.937338" />
     <add key="placesApiBase" value="https://maps.googleapis.com/maps/api/place/" />
+    <add key="redisHost" value="localhost" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
