--- a/RaiseTheBar/packages.config
+++ b/RaiseTheBar/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
@@ -17,6 +18,10 @@
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="ServiceStack.Common" version="4.0.56" targetFramework="net452" />
+  <package id="ServiceStack.Interfaces" version="4.0.56" targetFramework="net452" />
+  <package id="ServiceStack.Redis" version="4.0.56" targetFramework="net452" />
+  <package id="ServiceStack.Text" version="4.0.56" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
 </packages>
